[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny_http = "0.12.0"
tokio = { version = "*", features = ["full"] }
wplace-core-library = { branch = "main", git = "https://github.com/Place-Italian-Left-Unity/wplace-core-library"}
